--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,17 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@popperjs/core": "^2.11.8",
+    "ace-builds": "^1.34.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "codemirror": "^5.65.16",
     "core-js": "^3.6.5",
+    "element-plus": "^2.7.3",
     "jquery": "^3.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-ace-editor": "^2.2.4",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
