--- a/backendcloud/pom.xml
+++ b/backendcloud/pom.xml
@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>backend</module>
+        <module>botrunningsystem</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
 
